# jupyter-loopback

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  biome.json  justfile  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: release.yml  test.yml
demos/: PYVISTA_VSCODE.md  README.md  example.ipynb  pyproject.toml  pyvista_example.ipynb  test_pyvista_proxy.py
demos/jupyter-config/jupyter_server_config.d/: loopback-demo.json  pyvista-loopback-demo.json
demos/loopback_demo/: __init__.py
demos/loopback_demo/_jupyter/: __init__.py
demos/pyvista_loopback_demo/: __init__.py
demos/pyvista_loopback_demo/_jupyter/: __init__.py
jupyter_loopback/: __init__.py  _autodetect.py  _bridge_proxy.py  _comm.py  _server.py
jupyter_loopback/static/: widget.js
tests/: conftest.py  test_autodetect.py  test_bridge_proxy.py  test_comm.py  test_demo.py  test_server.py
